--- a/frontend/step_a.html
+++ b/frontend/step_a.html
@@ -55,9 +55,12 @@
     			<option value="DLD">DLD</option>
     			<option value="Maths">Maths</option>
     			<option value="DSGT">DSGT</option>
-  			  </select></span>
+  			  </select></span><br>
+          <span style="margin-left:180px;margin-top:50px;">
+           <input type="submit" value="Proceed"></span>
 		</form>
 	</div>
+
 <footer>
 <p style="text-align:left;"> &copy;Nibble Computer Society</p>
 </footer>
