--- a/frontend/step_b.html
+++ b/frontend/step_b.html
@@ -36,9 +36,9 @@
        </ul>
        </span>
        <span>
-         <h2>Create New Question Paper</h2>
-         <h2>Add a new Question to bank</h2>
-         <h2 style="margin-bottom: 50%;">View all questions in bank</h2>
+         <a href="step_c" target="_blank">Create New Question Paper</a><br><br>
+         <a href="step_e" target="_blank">Add a new Question to bank</a><br><br>
+         <a href="step_f" target="_blank">View all questions in bank</a><br><br>
          </span>
          </div>
     
