--- a/frontend/step_a.html
+++ b/frontend/step_a.html
@@ -20,18 +20,18 @@
 		</nav>
 	</header>
 	<div class="process">
-	<h2 style="text-align:center;">Step:1</h2>
-	 <div class="w3-progress-container w3-white" style="margin-left:500px;margin-bottom:20px;">
-    <div class="w3-progressbar w3-black" style="width:15%;"></div>
+	<h2>Step:1</h2>
+	 <div class="w3-progress-container w3-white">
+    <div class="w3-progressbar w3-black"></div>
   </div>
 </div>
 
-  <h1 style="font-size: 25px;margin-right: 400px;"><i>Please select the following fields to continue</i></h1>
+  <h1><i>Please select the following fields to continue</i></h1>
     <div class="form">
     	<form action="step_b.html" method="GET">
      			<div>
      			<span>
-     			<h2 style="font-size:20px;">Department:</h2></span>
+     			<h2>Department:</h2></span>
      			<span><h2 style="font-size:20px;margin-left: -8px">Year:</h2></span>
      			<span><h2 style="font-size:20px;margin-left: 42px">Subject:</h2>
      			</span>
@@ -62,7 +62,7 @@
 	</div>
 
 <footer>
-<p style="text-align:left;"> &copy;Nibble Computer Society</p>
+<p> &copy;Nibble Computer Society</p>
 </footer>
 
 </body>
