--- a/frontend/step_a.html
+++ b/frontend/step_a.html
@@ -21,46 +21,44 @@
 	</header>
 	<div class="process">
 	<h2>Step:1</h2>
-	 <div class="w3-progress-container w3-white">
-    <div class="w3-progressbar w3-black"></div>
-  </div>
 </div>
-
-  <h1><i>Please select the following fields to continue</i></h1>
+  <h3><i>Please select the following fields to continue:</i></h3>
     <div class="form">
     	<form action="step_b.html" method="GET">
      			<div>
-     			<span>
-     			<h2>Department:</h2></span>
-     			<span><h2 style="font-size:20px;margin-left: -8px">Year:</h2></span>
-     			<span><h2 style="font-size:20px;margin-left: 42px">Subject:</h2>
-     			</span>
+          <h4>Department:</h4>
+     			<h4>Year:</h4>
+     			<h4>Subject:</h4>
      			</div>
-     		  <span id="sel"><select name="dept">
+          <div>
+          <span><select name="dept">
     			<option value="CS">CS</option>
     			<option value="IT">IT</option>
     			<option value="EC">EC</option>
     			<option value="ME">ME</option>
-  			  </select></span>
-  			  <span id="sel">
+  			  </select>
+          </span>
+          <span class="year">
   			  <select name="yr">
     			<option value="1">1</option>
     			<option value="2">2</option>
     			<option value="3">3</option>
     			<option value="4">4</option>
-  			  </select></span>
-  			  <span id="sel">
+  			  </select>
+          </span>
+          <span>
   			  <select name="subject">
     			<option value="DS">DS</option>
     			<option value="DLD">DLD</option>
     			<option value="Maths">Maths</option>
     			<option value="DSGT">DSGT</option>
-  			  </select></span><br>
-          <span style="margin-left:180px;margin-top:50px;">
-           <input type="submit" value="Proceed"></span>
+  			  </select>
+          </span>
+          </div>
+          <br><br>
+           <input type="submit" value="Proceed">
 		</form>
 	</div>
-
 <footer>
 <p> &copy;Nibble Computer Society</p>
 </footer>
