--- a/frontend/step_1.html
+++ b/frontend/step_1.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<title>Sample</title>
-	<link rel="stylesheet" type="text/css" href="stylea.css">
-	<link rel="stylesheet" type="text/css" href="w3.css">
+	<link rel="stylesheet" type="text/css" href="css/style_1.css">
+	<link rel="stylesheet" type="text/css" href="css/w3.css">
 </head>
 <body>
 	<header>
