--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<title>Sample</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style_index.css">
 </head>
 <body>
 	<header>
@@ -20,7 +20,7 @@
 	</header>
 	<h1>Login</h1>
 	<div class="form">
-<form action="step_a.html" method="GET">
+<form action="step_1.html" method="GET">
      <input type="text" name="fname" placeholder="Username"><br>
   	<input type="Password" name="pword" placeholder="Password"><br>
   	<div class="sub">
