--- a/frontend/step_1.html
+++ b/frontend/step_1.html
@@ -24,7 +24,7 @@
 </div>
   <h3><i>Please select the following fields to continue:</i></h3>
     <div class="form">
-    	<form action="step_b.html" method="GET">
+    	<form action="step_2.html" method="GET">
      			<div>
           <h4>Department:</h4>
      			<h4>Year:</h4>
