--- a/frontend/all_ques.html
+++ b/frontend/all_ques.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<title>Sample</title>
-	<link rel="stylesheet" type="text/css" href="css/style_index.css">
+	<link rel="stylesheet" type="text/css" href="css/st_all.css">
 	<link rel="stylesheet" type="text/css" href="css/w3.css">
 </head>
 <body>
@@ -20,20 +20,11 @@
 		</nav>
 	</header>
 	<div class="process">
-	<h2><b>Login</b></h2>
-     </div>
-<div class="form">
-<form action="step_1.html" method="GET">
-     <input type="text" name="fname" placeholder="Username"><br>
-  	<input type="Password" name="pword" placeholder="Password"><br>
-  	<div class="sub">
-  	<input type="checkbox" name="check">Remember Me<br>
-  	<input type="submit" value="Submit">
-  	</div>
-</form>
+	<h2>Showing All Available Questions</h2>
 </div>
 <footer>
 <p> &copy;Nibble Computer Society</p>
 </footer>
+
 </body>
 </html>
